samples/_failures_safe/1761640436_723536_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3f82ce0.c: In function ‘main’:
./samples/SAFE/__tmp_e3f82ce0.c:135:5: error: expected expression at end of input
  135 |     if (len >
      |     ^~
./samples/SAFE/__tmp_e3f82ce0.c:135:5: error: expected declaration or statement at end of input
